# elastical-testical

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  binding.py  complete_build_command.sh  test.py
binding/: Makefile  binding.py  hmm.c
exe/: main
hmmmlib/: CMakeLists.txt  linux_build.sh
hmmmlib/Test/: TestBaumWelch.c  TestBaumWelch.h  TestPosteriorDecoding.c  TestPosteriorDecoding.h  TestViterbi.c  TestsForwardAlgorithm.c  testBackwardAlgorithm.c
hmmmlib/src/: main.c  main_test.c  shared.c
hmmmlib/src/Decoding/: posteriorDecoding.c  posteriorDecoding.h  viterbi.c  viterbi.h
hmmmlib/src/Evaluation/: backward.c  backward.h  backward_blas.c  forward.c  forward.h  forward_blas.c  forward_blas.h  straightforward.c  straightforward.h
hmmmlib/src/Evaluation/blas/: backward_blas.c  backward_blas.h  forward_blas.c
hmmmlib/src/Evaluation/conventional/: forward.c  forward.h
hmmmlib/src/Evaluation/csr/: backward_csr.c  backward_csr.h  forward_csr.c  forward_csr.h
hmmmlib/src/Evaluation/sblas/: forward_sblas.c  forward_sblas.h
hmmmlib/src/HMM/: hmm.c  hmm.h
hmmmlib/src/Test/: TestBaumWelch.c  TestViterbi.c  TestViterbi.h  TestsForwardAlgorithm.c  testBackwardAlgorithm.c  testBackwardAlgorithm.h
hmmmlib/src/Training/: baumWelch.c  baumWelch.h
hmmmmlib/: CMakeLists.txt  main.c
hmmmmlib.xcodeproj/: project.pbxproj
hmmmmlib.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
hmmmmlib.xcodeproj/project.xcworkspace/xcuserdata/thorjakobsen.xcuserdatad/: UserInterfaceState.xcuserstate
hmmmmlib.xcodeproj/xcuserdata/thorjakobsen.xcuserdatad/xcschemes/: xcschememanagement.plist
hmmmmlib/Decoding/: posteriorDecoding.c  posteriorDecoding.h  viterbi.c
hmmmmlib/Evaluation/: backward.c  backward.h  forward.c  forward.h  viterbi.c  viterbi.h
hmmmmlib/HMM/: hmm.c  hmm.h
hmmmmlib/Test/: ForwardAlgorithmTest.c  TestBaumWelch.c  TestBaumWelch.h  TestViterbi.h  TestsForwardAlgorithm.c  TestsForwardAlgorithm.h  testBackwardAlgorithm.c  testBackwardAlgorithm.h
hmmmmlib/Training/: baumWelch.c  baumWelch.h
hmmmmlib/src/: main.c
hmmmmlib/src/Decoding/: posteriorDecoding.c  viterbi.h
hmmmmlib/src/Evaluation/: backward.c  forward.h
hmmmmlib/src/HMM/: hmm.c
hmmmmlib/src/Test/: TestBaumWelch.h  TestViterbi.c  TestsForwardAlgorithm.c  testBackwardAlgorithm.c
hmmmmlib/src/Training/: baumWelch.c
pythonCode/: binding.py  makeTablesForTest.py
pythonCode/HMM/: experiment.py  experiment_2_state_hmm.py  experiment_2_state_hmm_matrix.py  experiment_7_state_hmm_matrix.py  fasta.py  forward_matrix.py  hmm-2-state.txt  hmm-7-state.txt  hmm.py  hmm_jointprob.py  hmm_log_jointprob.py  hmm_posterior.py  hmm_viterbi.py  test_seq1000.txt
pythonCode/ctypes-testing/: hmmlib.c  hmmlibbinding.py  readme.txt
pythonCode/ctypes-testing_deprecated/: build.sh  hmm.c  hmm.h
source/: hmm.c  hmm.h  main.c
test_framework/: binding.py  running_time.py  running_time2.py  test.py  time2.csv  withblas.csv
test_framework/plots/: .RData  .Rhistory  render_plots.R  viterbi_normal.csv
